# colight

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DEVELOPING.md  README.md  TODOS.md  debug_import_resolution.py  esbuild.config.mjs  mkdocs.yml  package.json  playwright.config.ts  pyproject.toml  tsconfig.json  tsconfig.scene3d.json  vitest.config.mjs
docs/: CHANGELOG.md  essential-reading.py  index.md  llms.py  pyproject.toml  scene3d-merge-plan.md  scene3d.py
docs/api/: plot.md  scene3d.md
docs/examples/: isotype.py  pixels.py
docs/export/: images_and_video.py  save_to_file.py
docs/guides/: data-analysis-workflow.py  getting-started.py  responsive-dashboards.py
docs/interactivity/: frames.py
docs/learn-more/: color.py  python-event-loop.py
docs/overrides/: tailwind.config.js
docs/system-guide/: state.py
examples/: pyproject.toml
examples/scene3d_live/: README.md  package.json  scene3d_live.py  server.py  vite.config.js
notebooks/: banana.py  bitmap.py  click.py  controlled_components_using_state.py  counter.py  embed_examples.py  export_colight.py  export_test.py  pdf_limits.py  pyproject.toml  save_and_embed_file.py  serialize_attribute_dicts.py  serialize_binary.py  webgpu_compute.py  widget_serialization_example.md
notebooks/anywidget/: anywidget_jax_callback.js  anywidget_jax_callback.py
notebooks/export/: colight_files.py  export.py  images_and_videos.py  pdf_limits.py
notebooks/genjax/: adev_demo.py
notebooks/intro_slides/: intro_slides.py
notebooks/scene3d/: banana.py  scene3d_demo.py  scene3d_occlusions.py  (+1 more)
(+96 files in other folders)
