[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "colight-examples"
version = "0.1.0"
description = "Colight example notebooks"
requires-python = ">=3.9"
dependencies = [
    "colight"
]

[tool.hatch.build.targets.wheel]
packages = ["src/notebooks"]

[tool.pyright]
venvPath = "../.."
venv = ".venv"
reportUnusedExpression = false

[tool.ruff.lint]
ignore = [
    "E402",
]